--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>StudentRecord</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="#" class="dropdown-item">Registration</a>
-                            <a href="#" class="dropdown-item">Attendance</a>
+                            <a href="#" class="dropdown-item">Student Registration</a>
+                            <a href="#" class="dropdown-item">Manage Student</a>
                             <a href="element.html" class="dropdown-item">Student Profile</a>
                         </div>
                     </div>
